@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
!pragma layout smetana

class Webserver {
- logger : Logger
- {static} PORT :int
- {static} FORMATTER : DateTimeFormatter
+ Webserver()
}

class SocketThread {
- logger : Logger
- inSocked : Socked
- makeRequest(tokens : String[]) : Request
- makeRequestReader(tokens : String[]) : RequestReader
- makeRequestArea(tokens : String[]) : RequestArea
- makeHeaderAnswer() : String
- makeJsonAnswer(request : Request) : String
+ run()
}

Webserver +-right- SocketThread

note right of SocketThread
inner class
of Webserver
end note

class DirectoryAreas
{
- logger : Logger
{static}- rootArea: Area
{static}- allDoors: Door[]
{static}- directoryAreas: DirectoryAreas
{static}+ getDirectoryAreas(): DirectoryAreas
{static}- makeAreas()
{static}- makeDoors()
{static}+ findAreaById(id : String) : Area
{static}- findDoorsByIds(ids : String[]) : Door[]
{static}+ findDoorById(id : String) : Door
{static}+ getAllDoors() : Door[]
}

DirectoryAreas --> "*" Area : "rootArea"

class Door {
- logger : Logger
- id : String
- closed : boolean
- currentState : DoorState
- fromSpace : Space
- toSpace : Space
- propped : boolean
+ Door(id : String, Space : fromSpace, Space : toSpace)
+ processRequest(request : RequestReader)
- doAction(action : String)
+ toJson() : JSONObject
+ changePropped()
}

class DirectoryUserGroups {
- logger : Logger
{static}- userGroups : UserGroup[]
{static}+ makeUserGroups()
{static}+ findUserByCredential(credential : String) : User
}

DirectoryUserGroups o--> "1..*" UserGroup : "userGroups"
UserGroup "1 userGroup"*-->"users*" User

class UserGroup {
- logger : Logger
- name : String
- users : User[]
- allowedActions : String[]
- allowedAreas : String[]
- schedule : Schedule
+ addUser(user : User)
+ canSendRequests(dateTime : LocalDateTime) : boolean
+ canBeInSpace(space : Space) : boolean
+ canDoAction(action : String) : boolean
+ findUserByCredential(credential : String) : User
}

UserGroup -right->"1" Schedule

class Schedule {
- weekDays : DayOfWeek[]
- startTime : LocalTime
- endTime : LocalTime
- startDate : LocalDate
- endDate : LocalDate

+ Schedule(weekDays : DayOfWeek[], startTime : LocalTime, endTime : LocalTime
    startDate : LocalDate, endDate : LocalDate)
+ isAllowedAt(dateTime : LocalDateTime) : boolean
}

class User {
- name : String
- credential : String
- userGroup : UserGroup
+ User(name: String, credential: String)
+ getCredential() : String
+ toString() : String
+ canBeInSpace(space : Space) : boolean
+ canSendRequests(dateTime : LocalDateTime) : boolean
+ canDoAction(action : String) : boolean
}


class Main {
+ {static} main(args : String)
}

abstract DoorState{
# logger : Logger
# door : Door
# name : String
{abstract}+ open()
{abstract}+ close()
{abstract}+ lock()
{abstract}+ unlock()
{abstract}+ unlockShortly()
{abstract}+ prop()
}

class Locked extends DoorState{
}

class Unlocked extends DoorState{
}

class UnlockedShortly extends DoorState{
{static}- CLOCK
- MAX_PERIOD : int
- startingTime : LocalDateTime
- timeComplete(time : LocalDateTime) : boolean
- checkIsTimeCompleted(elapsed : Duration) : boolean
}

class Propped extends DoorState{
}

abstract Area{
#id : String
#name : String
#parent: Area
+ getId() : String
{abstract}+ acceptVisitor(visitor : Visitor);
}

class Space extends Area{
- doors : Door[]
+ acceptVisitor(visitor : Visitor);
}

class Partition extends Area{
- areas : Area[]
+ acceptVisitor(visitor : Visitor);
}

class Clock{
- logger : Logger
- period : int
- date : LocalDateTime
- timer : Timer
{static}- clockInstance : Clock
{static}+ getClockInstance() : Clock
+ start()
}

interface Visitor {
 {abstract}+ visitSpace(space : Space)
 {abstract}+ visitPartition(partition : Partition)
}

class VisitorAnotherComputation implements Visitor {
- logger : Logger
+ visitSpace(space : Space)
+ visitPartition(partition : Partition)
}

class VisitorDoorGivingAccess implements Visitor {
- logger : Logger
- doorsGivingAccess : Door[]
+ visitSpace(space : Space)
+ visitPartition(partition : Partition)
}

class VisitorFindAreaById implements Visitor {
- logger : Logger
- area : Area
- searchedId : String
+ visitSpace(space : Space)
+ visitPartition(partition : Partition)
+ getArea() : Area
}

class VisitorGetProppedDoors implements Visitor {
- logger : Logger
- proppedDoors : Door[]
+ visitSpace(space : Space)
+ visitPartition(partition : Partition)
}

UnlockedShortly -left->"1" Clock : CLOCK

note right of Main::main
DirectoryAreas.makeAreas()
DirectoryUserGroups.makeUsers()
new Webserver()
end note

Main -[hidden]down- Webserver
Door -->"1" DoorState : currentState
Partition *-->"*" Area : areas
Space -->"*" Door : doors

package Java.util {
abstract Observable {
+ addObserver(o: Observer)
+ deleteObserver(o: Observer)
+ notifyObservers()
}
interface Observer{
{abstract}+ update(o: Observable, arg: Object)
}

Observable <|-- Clock
Observer <|.. UnlockedShortly
}

package org.slf4j {
    class Logger {
    + error (msg : String)
    + info (msg : String)
    + debug (msg : String)
    }
    class LoggerFactory {
    + getLogger(object : Object)
    }
}

User -[hidden]down- Visitor
Area -[hidden]left- Visitor
SocketThread -[hidden]up- VisitorGetProppedDoors
@enduml
